--- a/NLP/NLTK/GettingStarted_NLTK.ipynb
+++ b/NLP/NLTK/GettingStarted_NLTK.ipynb
@@ -25,7 +25,6 @@
    ],
    "source": [
     "!pip install nltk"
-    "nltk.download()"
    ]
   },
   {
@@ -36,7 +35,8 @@
    },
    "outputs": [],
    "source": [
-    "import nltk "
+    "import nltk ",
+    "nltk.download()"
    ]
   },
   {
